// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`H1 component renders unchanged 1`] = `
<h1
  className=""
  style={
    Object {
      "color": "#212529",
    }
  }
>
  Hello World
</h1>
`;

exports[`H2 component renders unchanged 1`] = `
<h2
  className=""
  style={
    Object {
      "color": "#212529",
    }
  }
>
  Hello World
</h2>
`;

exports[`H3 component renders unchanged 1`] = `
<h3
  className=""
  style={
    Object {
      "color": "#212529",
    }
  }
>
  Hello World
</h3>
`;

exports[`H4 component renders unchanged 1`] = `
<h4
  className=""
  style={
    Object {
      "color": "#212529",
    }
  }
>
  Hello World
</h4>
`;

exports[`H5 component renders unchanged 1`] = `
<h5
  className=""
  style={
    Object {
      "color": "#212529",
    }
  }
>
  Hello World
</h5>
`;

exports[`H6 component renders unchanged 1`] = `
<h6
  className=""
  style={
    Object {
      "color": "#212529",
    }
  }
>
  Hello World
</h6>
`;

exports[`P component renders unchanged 1`] = `
<p
  className=""
  style={
    Object {
      "color": "#212529",
    }
  }
>
  Hello World
</p>
`;
